scripts/service-yamls/auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      serviceAccountName: vault
      containers:
        - image: auth-server:0.1
          imagePullPolicy: Never
          name: auth-server
          ports:
            - containerPort: 9000
