scripts/service-yamls/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-server
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
        - image: db-server:0.1
          imagePullPolicy: Never
          name: db-server
          ports:
            - containerPort: 9001
