scripts/service-yamls/notify-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify-server
  template:
    metadata:
      labels:
        app: notify-server
    spec:
      serviceAccountName: vault
      containers:
        - image: notify-server:0.1
          imagePullPolicy: Never
          name: notify-server
          ports:
            - containerPort: 9006
