scripts/service-yamls/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-server
  template:
    metadata:
      labels:
        app: user-server
    spec:
      serviceAccountName: vault
      containers:
        - image: user-server:0.1
          imagePullPolicy: Never
          name: user-server
          ports:
            - containerPort: 9004
