scripts/service-yamls/auth-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9000
      nodePort: 30001
  selector:
    app: auth-server
