scripts/service-yamls/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
  selector:
    app: client
