scripts/service-yamls/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9001
      nodePort: 30003
  selector:
    app: db-server
