scripts/service-yamls/notify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notify-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9006
      nodePort: 30003
  selector:
    app: notify-server
