scripts/service-yamls/orchid-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchid-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9002
      nodePort: 30004
  selector:
    app: orchid-server
