scripts/service-yamls/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 9004
      nodePort: 30005
  selector:
    app: user-server
